test/error/parser/enum-mixed-mode-2.dsk
let Mixed = enum
    Ok
    NotFound = 404
    Error = 500
end
